KAFKA-17897: Deprecate Admin.listConsumerGroups